Fix overflow scroll
BUG=118626

Review URL: https://chromiumcodereview.appspot.com/9758003

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@128590 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: adb11878c09bc7e80a7509cb76b3064120d451b5

--- a/chrome/browser/resources/tracing/profiling_view.css
+++ b/chrome/browser/resources/tracing/profiling_view.css
@@ -1,16 +1,11 @@
-/*
-Copyright (c) 2011 The Chromium Authors. All rights reserved.
-Use of this source code is governed by a BSD-style license that can be
-found in the LICENSE file.
-*/
+/* Copyright (c) 2012 The Chromium Authors. All rights reserved.
+ * Use of this source code is governed by a BSD-style license that can be
+ * found in the LICENSE file. */
 #profiling-view {
+  display: -webkit-box;
   padding: 0;
   -webkit-box-orient: vertical;
   -webkit-box-flex: 1;
-}
-
-#profiling-view[selected] {
-  display: -webkit-box;
 }
 
 #profiling-view > .control {
